--- a/vsem_calibration_tests/gp_emulator_error_metrics.Rmd
+++ b/vsem_calibration_tests/gp_emulator_error_metrics.Rmd
@@ -205,9 +205,8 @@ test1_list <- generate_vsem_test_1(random_seed_1)
 ```{r, echo = FALSE}
 # Emulator settings
 emulator_settings <- data.frame(gp_lib = c("mlegp", "hetGP"), 
-                                target = c("SSR", "SSR"), 
                                 kernel = "Gaussian", 
-                                sampling_method = c("rectified", "truncated"),
+                                transformation_method = c("rectified", "truncated"),
                                 scale_X = TRUE, 
                                 normalize_y = TRUE)
 print(emulator_settings)
